# CG-Task

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
codegrapher/: main.py  middleware.py
codegrapher/app/: database.py  helpers.py  tasks.py
codegrapher/app/api/: candidate.py  users.py
codegrapher/app/models/: candidate.py  user.py
codegrapher/app/routes/: candidate.py  user.py
tests/: candidate_api.py  user_api.py
